--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <div class="span6 blank">
           Blank
         </div>
+        <div class="span4 about">
+          About
+        </div>
       </div>
       <div class="row heading">
         <div class="span12">
@@ -56,40 +59,41 @@
         <div class="span12">
           <p class="lead">This is my first bitstarter project.</p>
         </div>
-        <div class="row pitch">
-          <div class="span6 video">
-            Video
-          </div>
-          <div class="span6">
-            <div class="thermometer">
-              Thermometer
-            </div>
-            <div class="order">
-              Order
-            </div>
-            <div class="social">
-              Social
-            </div>
-          </div>
+      </div>
+      <div class="row pitch">
+        <div class="span6 video">
+          Video
         </div>
-        <div class="row section1">
-          <div class="span12">
-            Marketing Section 1
+        <div class="span6">
+          <div class="thermometer">
+            Thermometer
           </div>
-          <div class="row section2">
-            Marketing Section 2
+          <div class="order">
+            Order
           </div>
-        </div>
-        <div class="Row faq">
-          <div class="span12">
-            FAQ
-          </div>
-        </div>
-        <div class="row footer">
-          <div class="span12">
-            Footer
+          <div class="social">
+            Social
           </div>
         </div>
       </div>
-    </body>
-  </html>
+      <div class="row section1">
+        <div class="span12">
+          Marketing Section 1
+        </div>
+        <div class="row section2">
+          Marketing Section 2
+        </div>
+      </div>
+      <div class="Row faq">
+        <div class="span12">
+          FAQ
+        </div>
+      </div>
+      <div class="row footer">
+        <div class="span12">
+          Footer
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
