--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
         <div class="span12">
           Marketing Section 1
         </div>
-        <div class="row section2">
+      </div>
+      <div class="row section2">
+        <div class="span12">
           Marketing Section 2
         </div>
       </div>
