--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
       <!-- www.google.com/fonts/specifmen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Product Title</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Some description here!</p>
         </div>
       </div>
       <div class="row-fluid pitch">
