--- a/index.html
+++ b/index.html
@@ -2,53 +2,46 @@
 <html lang="en">
   <head>
     <title>My First Bitstarter</title>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+
+    <!-- Bootstrap 3 rc1 css -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script> 
+    <!-- Bootstrap 3 rc1 javascript -->
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
+
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
+
+    <!-- Inline CSS starts here -->
     <style type="text/css">
 
-      /* Large desktop */
-      @media (min-width: 980px) {
-        body {
-          padding-top: 60px;
-        }
-        .linediv-l {
-          border-right: 1px white solid;
-        }
-        .linediv-r {
-          border-left: 1px white solid;
-        }
-      } 
-
-      /* Landscape phones and down */
-      @media (max-width: 480px) {
-        .copy {
-          padding: 2.5% 10%;
-        }
-        .linediv-l {
-          border-bottom: 1px white solid;
-        }
-        .linediv-r {
-          border-top: 1px white solid;
-        }
-      }
-
-
-      /* All form factors */
+      /* Color palette: http://www.colourlovers.com/palette/1281434/Big_Dreams_I */
+      /*
+      #75782B 
+      #343434
+      #F0EFED
+      #990000
+      #EF5332   
+      */  
 
       /* Main body and headings */
       body {
         font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+        background-color: #F0EFED;
       }
       .heading, .subheading {
         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
         text-align: center;
+      }
+      .jumbotron {
+        color: white;
+        background-color: #75782B;
       }
       p.lead {
         padding-top: 1.5%;
@@ -69,7 +62,7 @@
       }
       .actions {
         background-color: #343434;
-        padding: 3% 0%;
+        padding: 1% 3% 2% 3%;
       }
       .video, .thermometer, .order, .social, .statistics {
         text-align: center;
@@ -99,91 +92,88 @@
       }
     </style>
   </head>
+
   <body>
 
-    <!-- Mobile-friendly navbar adapted from example. -->
-    <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
+    <!-- Navbar -->
     <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">Bitstarter</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+      <div class="container">
 
-    <!-- We use row-fluid inside containers to achieve a resizeable layout. -->
-    <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
-    <!-- http://stackoverflow.com/a/12270322 -->
-    <div class="container">
-      <!-- Font and paired font of .heading/.subheading and body from Google Fonts -->
-      <!-- www.google.com/fonts/specimen/Ubuntu -->
-      <!-- www.google.com/fonts/specifmen/Ubuntu#pairings -->
-      <div class="row-fluid heading">
-        <div class="span12">
-          <h1>Product Title</h1>
-        </div>
+        <!-- .navbar-toggle is used as the toggle for collapsed navbar content -->  
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+        <a class="navbar-brand" href="#">Bitstarter</a>
+
+        <div class="nav-collapse collapse navbar-responsive-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div> <!-- /.nav-collapse -->
+      </div> <!-- /.container --> 
+    </div> <!-- /.navbar -->
+
+    <!-- Jumbotron -->
+    <div class="row jumbotron">
+      <div class="col-lg-12 heading">
+        <h1>Product Title</h1>
       </div>
-      <div class="row-fluid subheading">
-        <div class="span12">
+      <div class="row subheading">
+        <div class="col-lg-12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
           <p class="lead">Some description here!</p>
         </div>
       </div>
-      <div class="row-fluid pitch">
-        <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+    </div>
+    
+    <!-- Main page in container -->
+    <div class="container">
+      <div class="row pitch">
+        <div class="col-lg-5 col-offset-1 video">
+          <img class="img-polaroid img-responsive" src="http://placehold.it/480x300">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
-        <div class="span5 actions">
-          <div class="span8 offset2">
+        <div class="col-lg-5 actions">
+          <div class="col-lg-8 col-offset-2">
             <div class="statistics">
-              <div class="span4">
-                <!-- linediv-l and linediv-r give dividing lines that look different
-                in horizontal and vertical layouts, illustrating media queries. -->
-                <div class="linediv-l">
+              <div class="col-lg-4">
+                <div>
                   <h3>1000</h3> <p>backers</p>
                 </div>
               </div>
-              <div class="span4">
-                <div class="linediv-c">
+              <div class="col-lg-4">
+                <div>
                   <h3>$6000</h3> <p>of $10,000</p>
                 </div>
               </div>
-              <div class="span4">
-                <div class="linediv-r">
+              <div class="col-lg-4">
+                <div>
                   <h3>10</h3> <p>days left</p>
                 </div>
               </div>
             </div>
           </div>
-          <div class="span10 offset1">
+          <div class="col-lg-10 col-offset-1">
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
-            <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 60%;"></div>
-              <div class="bar bar-warning" style="width: 40%;"></div>
+            <div class="thermometer progress">
+              <div class="progress-bar progress-bar-success" style="width: 60%;"></div>
+              <div class="progress-bar progress-bar-warning" style="width: 40%;"></div> 
             </div>
           </div>
-          <div class="span6 offset3 order">
+          <div class="col-lg-6 col-offset-3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
-          <div class="span8 offset2 social">
+          <div class="col-lg-8 col-offset-2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
@@ -191,37 +181,37 @@
           </div>
         </div>
       </div>
-              
+
       <!-- Beyond this part the marketing copy begins. -->
       <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
       <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
       <!-- http://placehold.it -->
-      <div class="row-fluid section1">
-        <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+      <div class="row section1">
+        <div class="col-lg-5 col-offset-1 asset">
+          <img class="img-polaroid img-responsive" src="http://placehold.it/480x300">
         </div>
-        <div class="span5 copy">
+        <div class="col-lg-5 copy">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
         </div>
       </div>
 
 
-      <div class="row-fluid section2">
-        <div class="span5 offset1 copy copy-right">
+      <div class="row section2">
+        <div class="col-lg-5 col-offset-1 copy copy-right">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
         </div>
-        <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+        <div class="col-lg-5 asset">
+          <img class="img-polaroid img-responsive" src="http://placehold.it/480x300">
         </div>
       </div>
 
       <!-- For the FAQ, we introduce a little bit of JS, using the accordion. -->
       <!-- This brings in jquery.js and bootstrap.js as dependencies. -->
       <!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->
-      <div class="row-fluid faq">
-        <div class="span10 offset1">
+      <div class="row faq">
+        <div class="col-lg-10 col-offset-1">
           <h3>FAQ</h3>
           <div class="accordion" id="accordion2">
             <div class="accordion-group">
@@ -255,8 +245,8 @@
 
       <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
       <!-- http://creativecommons.org/licenses/ -->
-      <div class="row-fluid footer">
-        <div class="span12">
+      <div class="row footer">
+        <div class="col-lg-12">
           <p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>, without all the cruft that would otherwise be put at the bottom of a page.</p>
         </div>
       </div>
