Minor modifications to html and colors

--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
 
       /* Color palette: http://www.colourlovers.com/palette/1281434/Big_Dreams_I */
       /*
-      #75782B 
+      #F4F4F4
+      #D5D6CB
+      #B3B3A1
       #343434
-      #F0EFED
-      #990000
-      #EF5332   
+      #71948D
       */  
 
       /* Main body and headings */
       body {
         font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-        background-color: #F0EFED;
+        background-color: #F4F4F4;
       }
       .heading, .subheading {
         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
         text-align: center;
       }
       .jumbotron {
-        color: white;
-        background-color: #75782B;
+        color: #F4F4F4;
+        background-color: #71948D;
       }
       p.lead {
         padding-top: 1.5%;
