--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div class="container">
       <div class="row pitch">
         <div class="col-lg-5 col-offset-1 video">
-          <img class="img-polaroid img-responsive" src="http://placehold.it/480x300">
+          <img class="img-thumbnail img-responsive" src="http://placehold.it/480x300">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
@@ -188,7 +188,7 @@
       <!-- http://placehold.it -->
       <div class="row section1">
         <div class="col-lg-5 col-offset-1 asset">
-          <img class="img-polaroid img-responsive" src="http://placehold.it/480x300">
+          <img class="img-thumbnail img-responsive" src="http://placehold.it/480x300">
         </div>
         <div class="col-lg-5 copy">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -203,7 +203,7 @@
           </p>
         </div>
         <div class="col-lg-5 asset">
-          <img class="img-polaroid img-responsive" src="http://placehold.it/480x300">
+          <img class="img-thumbnail img-responsive" src="http://placehold.it/480x300">
         </div>
       </div>
 
