--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       }
       .actions {
         background-color: #343434;
-        padding: 1% 3% 2% 3%;
+        padding: 3% 0%;
       }
       .video, .thermometer, .order, .social, .statistics {
         text-align: center;
@@ -70,15 +70,18 @@
       .statistics h3, .statistics p {
         color: white;
       }
+      .section1 {
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+      }
+      .section2 {
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+      }
 
       /* Marketing Copy and Footer */
       .copy {
-        padding-top: 2.5%;
-        padding-bottom: 2.5%;
         text-align: justify;
-      }
-      .asset {
-        padding: 2.5% 0%;
       }
       .footer {
         color: #cccccc;
@@ -131,7 +134,7 @@
         </div>
       </div>
     </div>
-    
+
     <!-- Main page in container -->
     <div class="container">
       <div class="row pitch">
@@ -141,46 +144,47 @@
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
         <div class="col-lg-5 actions">
-          <div class="col-lg-8 col-offset-2">
-            <div class="statistics">
-              <div class="col-lg-4">
-                <div>
-                  <h3>1000</h3> <p>backers</p>
+            <div class="col-lg-10 col-offset-1 statistics">
+                <div class="col-lg-4">
+                  <div>
+                    <h3>1000</h3> <p>backers</p>
+                  </div>
                 </div>
-              </div>
-              <div class="col-lg-4">
-                <div>
-                  <h3>$6000</h3> <p>of $10,000</p>
+                <div class="col-lg-4">
+                  <div>
+                    <h3>$6000</h3> <p>of $10,000</p>
+                  </div>
                 </div>
-              </div>
-              <div class="col-lg-4">
-                <div>
-                  <h3>10</h3> <p>days left</p>
+                <div class="col-lg-4">
+                  <div>
+                    <h3>10</h3> <p>days left</p>
+                  </div>
                 </div>
+              </div> <!-- ./statistics -->
+              
+            <div class="col-lg-10 col-offset-1">
+              <!-- Bootstrap progress bar -->
+              <!-- http://twitter.github.io/bootstrap/components.html#progress -->
+              <div class="thermometer progress">
+                <div class="progress-bar progress-bar-success" style="width: 60%;"></div>
+                <div class="progress-bar progress-bar-warning" style="width: 40%;"></div> 
               </div>
             </div>
-          </div>
-          <div class="col-lg-10 col-offset-1">
-            <!-- Bootstrap progress bar -->
-            <!-- http://twitter.github.io/bootstrap/components.html#progress -->
-            <div class="thermometer progress">
-              <div class="progress-bar progress-bar-success" style="width: 60%;"></div>
-              <div class="progress-bar progress-bar-warning" style="width: 40%;"></div> 
+
+            <div class="col-lg-6 col-offset-3 order">
+              <!-- Standard Bootstrap button. -->
+              <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
+              <button class="btn btn-success btn">Preorder</button>
             </div>
-          </div>
-          <div class="col-lg-6 col-offset-3 order">
-            <!-- Standard Bootstrap button. -->
-            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
-          </div>
-          <div class="col-lg-8 col-offset-2 social">
-            <!-- Social buttons are not included in default Bootstrap. -->
-            <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+
+            <div class="col-lg-8 col-offset-2 social">
+              <!-- Social buttons are not included in default Bootstrap. -->
+              <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
+              <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+              <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+            </div>
           </div>
         </div>
-      </div>
 
       <!-- Beyond this part the marketing copy begins. -->
       <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
